src/test/resources/api/WEB-INF/jsp/error/json/400.jsp
{
	"status":"400",
	"title":"Bad Rquest",
	"description": "The request could not be understood by the server due to malformed syntax."
}
<%@ page contentType="application/json; charset=UTF-8"%>